# fluss-rust

./: .gitignore  Cargo.toml  fluss-hook-design.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build_and_test_node.yml  release_node.yml
.qoder/repowiki/zh/content/: 开发指南.md  快速开始.md  项目概述.md
.qoder/repowiki/zh/content/API 参考/: API 参考.md  RPC 通信 API.md  元数据 API.md  客户端 API.md  记录 API.md  配置 API.md
.qoder/repowiki/zh/content/RPC 通信/: RPC 通信.md  传输层.md  协议定义.md  服务器连接.md  消息处理.md
.qoder/repowiki/zh/content/元数据管理/: JSON 序列化.md  Row 数据结构.md  元数据管理.md  数据类型系统.md  表描述符.md
.qoder/repowiki/zh/content/客户端架构/: 元数据管理.md  写入客户端系统.md  客户端架构.md  管理接口.md  连接管理.md
.qoder/repowiki/zh/content/客户端架构/表操作/: 批量写入 (TableAppend).md  日志扫描 (TableScan).md  流式写入 (TableWriter).md  表操作.md
.qoder/repowiki/zh/content/性能优化/: 内存管理优化.md  写入性能优化.md  性能优化.md  网络层优化.md  读取性能优化.md
.qoder/repowiki/zh/content/数据写入功能/: 写入客户端.md  写入策略与优化.md  批量写入机制.md  数据写入功能.md  追加写入器.md
.qoder/repowiki/zh/content/数据读取功能/: 数据读取功能.md  数据过滤.md  日志扫描机制.md  流式处理.md  订阅管理.md
.qoder/repowiki/zh/content/核心概念/: Arrow 格式介绍.md  分布式表概念.md  异步编程模型.md  数据类型系统.md  核心概念.md
.qoder/repowiki/zh/content/测试指南/: 单元测试.md  性能测试.md  测试指南.md  测试自动化.md  集成测试.md
.qoder/repowiki/zh/content/表管理功能/: Schema 管理.md  分区与分桶配置.md  表创建.md  表查询.md  表管理功能.md
.qoder/repowiki/zh/content/配置管理/: 写入配置.md  安全配置.md  环境变量配置.md  连接参数配置.md  配置管理.md
.qoder/repowiki/zh/content/错误处理/: RPC 错误处理.md  客户端错误类型.md  记录错误处理.md  错误处理.md  错误恢复策略.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
bindings/node/: Cargo.toml  DEVELOPMENT.md  README.md  README_CN.md  index.d.ts  package.json  tsconfig.json
bindings/node/__test__/helpers/: cluster.ts  teardown.ts
bindings/node/__test__/integration/: admin.spec.ts  kv-table.spec.ts  log-table.spec.ts  sasl-auth.spec.ts
bindings/node/__test__/unit/: config.spec.ts  metadata.spec.ts  schema.spec.ts
bindings/node/example/: example.mjs
bindings/node/src/: admin.rs  config.rs  connection.rs  error.rs  lib.rs  lookup.rs  metadata.rs  row.rs  scanner.rs  table.rs  upsert.rs  write_handle.rs
bindings/python/: Cargo.toml
bindings/wasm/: .gitignore  Cargo.toml  GUIDE.md  README.md  fluss-wasm.d.ts  package.json
bindings/wasm/examples/: usage.js
bindings/wasm/src/: admin.rs  client.rs  config.rs  error.rs  lib.rs  table.rs
crates/fluss/: Cargo.toml
crates/fluss-datafusion/: Cargo.toml
crates/fluss-datafusion/src/: config.rs  error.rs  install.rs  lib.rs
crates/fluss-datafusion/src/backend/: mod.rs  real.rs
crates/fluss-datafusion/src/catalog/: mod.rs  provider.rs  register.rs  schema.rs
crates/fluss-datafusion/src/execution/: lookup.rs  mod.rs  stream.rs
crates/fluss-datafusion/src/metadata/: cache.rs  loader.rs
crates/fluss-datafusion/src/table/: mod.rs
crates/fluss-datafusion/src/types/: record_batch.rs  scalar.rs
crates/fluss-datafusion/tests/fixtures/: phase1.json
crates/fluss-datafusion/tests/integration/: capture.rs  catalog.rs  kv_lookup.rs  log_scan.rs  mod.rs  replay.rs  setup.rs  utils.rs
crates/fluss-test-cluster/: test-images.env
crates/fluss-test-cluster/src/: lib.rs
crates/fluss/src/client/: connection.rs
crates/fluss/src/client/table/: kv_full_scan.rs  mod.rs  scanner.rs
crates/fluss/src/metadata/: data_lake_format.rs  datatype.rs  table.rs
crates/fluss/src/record/: arrow.rs
crates/fluss/src/rpc/: server_connection.rs
crates/fluss/tests/: test_fluss.rs
crates/fluss/tests/integration/: connection_io_handle.rs  kv_changelog.rs  kv_full_scan.rs
crates/integrations/datafusion/: Cargo.toml
crates/integrations/datafusion/docs/: README.md  README.zh.md  design.md  design.zh.md
crates/integrations/datafusion/examples/: datafusion_demo.rs
crates/integrations/datafusion/examples/support/: demo_runner.rs
crates/integrations/datafusion/src/: config.rs  error.rs  install.rs  lib.rs  runtime.rs  test_overrides.rs
crates/integrations/datafusion/src/backend/: fake.rs  fixtures.rs  mod.rs  real.rs
crates/integrations/datafusion/src/catalog/: mod.rs  provider.rs  register.rs  schema.rs
crates/integrations/datafusion/src/execution/: kv_full_scan.rs  log_scan.rs  lookup.rs  mod.rs  prefix_lookup.rs  union_scan.rs
crates/integrations/datafusion/src/metadata/: cache.rs  loader.rs  mod.rs
crates/integrations/datafusion/src/table/: kv.rs  log.rs  mod.rs  predicate.rs  union.rs
crates/integrations/datafusion/src/types/: mod.rs  record_batch.rs  scalar.rs
crates/integrations/datafusion/tests/: test_fluss_datafusion.rs
crates/integrations/datafusion/tests/integration/: capture.rs  catalog.rs  e2e.rs  example_smoke.rs  kv_bounded_scan.rs  kv_full_scan.rs  kv_prefix_lookup.rs  lake_tiering_sql.rs  lake_union_sql.rs  live_metadata.rs  mod.rs  setup.rs  swap_connection.rs  type_coverage.rs  utils.rs
crates/lake/: Cargo.toml  DESIGN.md
crates/lake/src/: api.rs  append.rs  catalog.rs  config.rs  error.rs  lib.rs  pk.rs  plan.rs  schema.rs  snapshot.rs  test_overrides.rs  union.rs
crates/lake/src/reader/: append.rs  changelog.rs  lake.rs  log.rs  merge.rs  mod.rs
crates/lake/tests/: append_union_e2e.rs  lake_read.rs  log_tail_integration.rs  pk_union_e2e.rs  tiering_e2e.rs
docs/: fluss-datafusion-phase1-design.md  fluss-datafusion-phase1-status.md
