# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "fluss-lake"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Engine-agnostic lake+log union read kernel for Apache Fluss"
publish = false

[dependencies]
fluss = { workspace = true }
# paimon-rust is an unreleased local tree (workspace 0.3.0); crates.io lags at
# 0.2.0 with a different API, so depend on the sibling checkout by path. CI /
# packaging will need this pinned to a git rev or a vendored copy.
paimon = { path = "../../../paimon-rust/crates/paimon" }
arrow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0"
tokio = { workspace = true }

[features]
# Docker-backed integration tests against a real Fluss cluster. Requires a
# running container runtime. The lake-read tests need no cluster and always run.
integration_tests = []

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
futures = "0.3"
fluss-test-cluster = { path = "../fluss-test-cluster" }
