# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "fluss-lake"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Engine-agnostic lake+log union read kernel for Apache Fluss"
publish = false

[dependencies]
fluss = { workspace = true }
# paimon-rust is not on crates.io (crates.io lags at 0.2.0 with a different API),
# so depend on the beryllw fork by git tag. Using a tag (not a local path) keeps
# fluss-lake — and any crate that enables it — self-contained as a git dependency.
# The `v0.3.0-fluss.1` tag is paimon 0.3.0 plus the object-store-safe filesystem
# catalog existence fix required to read an S3 lake warehouse. `storage-s3` adds
# the S3 backend (opendal services-s3); default features only cover memory/fs/oss.
paimon = { git = "https://github.com/beryllw/paimon-rust", tag = "v0.3.0-fluss.1", features = [
    "storage-s3",
] }
arrow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0"
tokio = { workspace = true }

[features]
# Docker-backed integration tests against a real Fluss cluster. Requires a
# running container runtime. The lake-read tests need no cluster and always run.
integration_tests = []

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
futures = "0.3"
fluss-test-cluster = { path = "../fluss-test-cluster" }
