# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "fluss-datafusion"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DataFusion integration for Apache Fluss"

[[example]]
name = "datafusion_demo"
path = "examples/datafusion_demo.rs"

[dependencies]
fluss = { workspace = true }
fluss-lake = { path = "../../lake" }
datafusion = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
futures = "0.3"
arc-swap = "1"

[features]
# Docker-backed integration tests against a real Fluss cluster. Requires a
# running container runtime. Enables the matching feature in fluss-lake so the
# kernel's test-only seam override is available.
integration_tests = ["fluss-lake/integration_tests"]

[dev-dependencies]
fluss-test-cluster = { path = "../../fluss-test-cluster" }
# Gated SQL e2e seeds a Paimon warehouse directly (no tiering service in the
# harness), so the integration tests need the Paimon writer + a temp dir.
paimon = { path = "../../../../paimon-rust/crates/paimon" }
tempfile = "3"
tokio = { workspace = true }
arrow = { workspace = true }
futures = "0.3"
